# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jgoerzen@complete.org--projects/missingh--head--0.5
#

2004-11-18 20:08:19 GMT	John Goerzen <jgoerzen@complete.org>	patch-82

    Summary:
      Removed separate lexer
    Revision:
      missingh--head--0.5--patch-82


    new files:
     libsrc/MissingH/ConfigParser/Parser.hs

    removed files:
     libsrc/MissingH/ConfigParser/Lexer.hs
     libsrc/MissingH/ConfigParser/Parser.hs

    modified files:
     ChangeLog testsrc/ConfigParser/Parsertest.hs


2004-11-18 19:37:22 GMT	John Goerzen <jgoerzen@complete.org>	patch-81

    Summary:
      Basic parser is working
    Revision:
      missingh--head--0.5--patch-81


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser/Lexer.hs
     testsrc/ConfigParser/Parsertest.hs testsrc/Testutil.hs


2004-11-18 19:13:50 GMT	John Goerzen <jgoerzen@complete.org>	patch-80

    Summary:
      Finished off basic tests
    Revision:
      missingh--head--0.5--patch-80


    modified files:
     ChangeLog testsrc/ConfigParser/Parsertest.hs


2004-11-18 19:10:38 GMT	John Goerzen <jgoerzen@complete.org>	patch-79

    Summary:
      Fixed assertRaises
    Revision:
      missingh--head--0.5--patch-79


    modified files:
     ChangeLog testsrc/ConfigParser/Parsertest.hs
     testsrc/Testutil.hs


2004-11-18 18:44:55 GMT	John Goerzen <jgoerzen@complete.org>	patch-78

    Summary:
      Fixed comment line / empty line conflict
    Revision:
      missingh--head--0.5--patch-78


    modified files:
     ChangeLog libsrc/MissingH/ConfigParser/Lexer.hs
     testsrc/ConfigParser/Parsertest.hs


2004-11-18 18:36:43 GMT	John Goerzen <jgoerzen@complete.org>	patch-77

    Summary:
      Fixed eof problems
    Revision:
      missingh--head--0.5--patch-77


    modified files:
     ChangeLog testsrc/ConfigParser/Parsertest.hs


2004-11-18 18:34:40 GMT	John Goerzen <jgoerzen@complete.org>	patch-76

    Summary:
      Fixed eof problems